# BTC-trend-prediction

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.py
app/: app.py
models/: hmm_regime_model.pkl  lstm_trend_model.keras  scaler.pkl
notebooks/: 01_EDA.ipynb  02_Preprocessing.ipynb  03_Feature_Engineering.ipynb  04_Model_Training.ipynb  05_Evaluation.ipynb  ML_Pipeline.ipynb
scripts/: pull_history.py  run_backtest.py  sanity_mt5.py
src/: __init__.py  pipeline.py  utils.py
src/features/: engineer.py
src/mcmc_cuda/: config.py
src/mcmc_cuda/backtest/: costs.py  engine.py  engine_ohlc.py  metrics.py  risk.py  walkforward.py
src/mcmc_cuda/data/: loader.py  mt5_loader.py  timeframes.py
src/mcmc_cuda/features/: microstructure.py  momentum.py  regime.py  slope.py  strength.py
src/mcmc_cuda/gpu/: device.py  markov.py  monte_carlo.py
src/mcmc_cuda/strategy/: ensemble.py  filters.py  scalp.py  sessions.py  smc.py
src/mcmc_cuda/ui/: live_chart.py  trade_chart.py
src/models/: __init__.py  sklearn_models.py
src/utils/: __init__.py  metrics.py
tests/: __init__.py  conftest.py  test_backtest.py  test_breakeven.py  test_costs.py  test_data.py  test_engine_scalp.py  test_features.py  test_filters.py  test_markov.py  test_metrics.py  test_microstructure.py  test_models.py  test_monte_carlo.py  test_preprocessor.py  test_risk.py  test_scalp_signals.py  test_sessions.py  test_smc.py  test_smoke.py  test_tiebreak.py
