[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcmc_cuda"
version = "0.1.0"
description = "GPU-accelerated Monte Carlo + Markov Chain price prediction for XAUUSD with MT5 paper-trading bridge"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "David Huang" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
